forEnersys/DavePkg/objects/Release__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date of Release deployment</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Release Month</description>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start of the build of the release</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Man_Hours__c</fullName>
        <inlineHelpText>SUM of Man Hours on related I&amp;Es</inlineHelpText>
        <label>Total Man Hours</label>
        <summarizedField>Issues_Enhancements__c.Man_Hours__c</summarizedField>
        <summaryForeignKey>Issues_Enhancements__c.Release__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Frequency/Type of Release driven by the scale of the ticket(s) associated</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Items__c</fullName>
        <inlineHelpText>Count of I&amp;Es associated with this release</inlineHelpText>
        <label># of Items</label>
        <summaryForeignKey>Issues_Enhancements__c.Release__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>of_Items__c</columns>
        <columns>Total_Man_Hours__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Releases_This_Month</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>of_Items__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Month__c</field>
            <operation>equals</operation>
            <value>May</value>
        </filters>
        <label>Releases This Month</label>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Require_Month_if_Type_Equals_Monthly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Type__c , &quot;Monthly&quot;),
ISPICKVAL( Month__c , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Month__c</errorDisplayField>
        <errorMessage>If selecting &quot;Monthly&quot; as the release type, please select a month.</errorMessage>
    </validationRules>
</CustomObject>